k8s/cloudwatch-fluentbit.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: amazon-cloudwatch
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fluent-bit
  namespace: amazon-cloudwatch
spec:
  selector:
    matchLabels: { app: fluent-bit }
  template:
    metadata:
      labels: { app: fluent-bit }
    spec:
      containers:
        - name: fluent-bit
          image: amazon/aws-for-fluent-bit:latest
          volumeMounts:
            - { name: varlog, mountPath: /var/log }
            - {
                name: varlibdockercontainers,
                mountPath: /var/lib/docker/containers,
                readOnly: true,
              }
            - { name: config, mountPath: /fluent-bit/etc/ }
      volumes:
        - { name: varlog, hostPath: { path: /var/log } }
        - {
            name: varlibdockercontainers,
            hostPath: { path: /var/lib/docker/containers },
          }
        - { name: config, configMap: { name: fluent-bit-config } }
