k8s/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pdf-worker
  namespace: pdf
spec:
  replicas: 2
  selector:
    matchLabels: { app: pdf-worker }
  template:
    metadata:
      labels: { app: pdf-worker }
    spec:
      serviceAccountName: pdf-worker-sa
      containers:
        - name: worker
          image: REPLACE_ECR_WORKER_IMAGE:latest
          resources:
            requests: { cpu: "250m", memory: "512Mi" }
            limits: { cpu: "1000m", memory: "2Gi" }
