k8s/zip-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pdf-zip-worker
  namespace: pdf
spec:
  replicas: 1
  selector:
    matchLabels: { app: pdf-zip-worker }
  template:
    metadata:
      labels: { app: pdf-zip-worker }
    spec:
      serviceAccountName: pdf-zip-sa
      containers:
        - name: zip-worker
          image: REPLACE_ECR_ZIP_IMAGE:latest
          resources:
            requests: { cpu: "250m", memory: "512Mi" }
            limits: { cpu: "1000m", memory: "2Gi" }
