k8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pdf-api
  namespace: pdf
spec:
  replicas: 2
  selector:
    matchLabels: { app: pdf-api }
  template:
    metadata:
      labels: { app: pdf-api }
    spec:
      serviceAccountName: pdf-api-sa
      containers:
        - name: api
          image: REPLACE_ECR_API_IMAGE:latest
          ports: [{ containerPort: 4000 }]
---
apiVersion: v1
kind: Service
metadata:
  name: pdf-api-svc
  namespace: pdf
spec:
  selector: { app: pdf-api }
  ports:
    - port: 80
      targetPort: 4000
  type: ClusterIP
