k8s/notifier.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pdf-notifier
  namespace: pdf
spec:
  replicas: 1
  selector:
    matchLabels: { app: pdf-notifier }
  template:
    metadata:
      labels: { app: pdf-notifier }
    spec:
      serviceAccountName: pdf-notifier-sa
      containers:
        - name: notifier
          image: REPLACE_ECR_NOTIFIER_IMAGE:latest
          ports: [{ containerPort: 4010 }]
---
apiVersion: v1
kind: Service
metadata:
  name: pdf-notifier-svc
  namespace: pdf
spec:
  selector: { app: pdf-notifier }
  ports:
    - port: 80
      targetPort: 4010
  type: ClusterIP
